# usb_applet

./: package.nix  pyproject.toml  shell.nix
ghaf_usb_applet/: pyproject.toml
ghaf_usb_applet/src/ghaf_usb_applet/: api_client.py  applet.py  logger.py  notification_handler.py  settings.py  vm_selection.py
usb_applet/: pyproject.toml  shell.nix
usb_applet/src/: settings.py
usb_applet/src/usb_ctl/: api_client.py  applet.py  logger.py  notification_handler.py  settings.py  vm_selection.py
usb_applet/src/usb_panel/: alert.py  api_client.py  applet.py  logger.py
usb_panel/: __main__.py  applet.py
